--- a/main.css
+++ b/main.css
@@ -6,6 +6,14 @@ margin: 0;
 font:17px/1.7 arial,"Microsoft Yahei","Hiragino Sans GB",sans-serif;
 color: #555
 }
+
+img{border:none;
+
+}
+
+
+
+
 .clearfix:before,
 .clearfix:after{
   content: "";
@@ -28,7 +36,7 @@ color: #fff;
 
 
 
-.wrapper{height: 700px;
+.wrapper{
 width: 960px;
 box-shadow: 0 2px 5px rgba(0,0,0,0.4);
 background: #fff;
@@ -46,6 +54,18 @@ padding: 30px
 .post-title{font-weight: normal;
 color: #eb3170;
 text-align: center;
-margin: 30px 0;
+margin: 10px 0;
 
 }
+
+.post-img{max-width:500px;
+	display: block;
+margin: 30px auto;
+
+
+
+}
+
+
+
+
