--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 /* common.css */
 
 *{box-sizing:border-box;}
-body{background: #fafafa;
+body{
 margin: 0;
 font:17px/1.7 arial,"Microsoft Yahei","Hiragino Sans GB",sans-serif;
 color: #555
@@ -10,7 +10,7 @@ color: #555
 img{border:none;
 
 }
-
+a {text-decoration: none;}
 
 
 
@@ -25,30 +25,59 @@ img{border:none;
 
 
 
-
-
-.header{height: 70px;
-background: #1b39ab;
+/* layout.css */
+.header{position: fixed;
+top:0;
+left:0;
+width: 100%;
+height: 50px;
+background: #00b0b8;
 font-size: 50px;
 color: #fff;
 }
 
+.header .logo{
+display: block;
+width: 60px;
+height: 60px;
+border-radius:50%;
+
+ /* 居中 */
+position: fixed;
+ left: 50%;
+ margin-left: -30px;
+ top: 10px;
+
+/* 字体居中 */
+color: #fff;
+font-size: 35px;
+line-height: 60px;
+text-align: center;
 
 
-
-.wrapper{
-width: 960px;
-box-shadow: 0 2px 5px rgba(0,0,0,0.4);
-background: #fff;
-margin: 10px auto;
-padding: 30px
-
+/* 颜色样式 */
+background: #00c4cc;
+box-shadow: 0 5px 5px rgba(0,0,0,1);
 }
 
 
 
 
-/* blog post */
+
+
+
+
+
+/* blog.css */
+
+.blog-wrapper{
+width: 660px;
+margin: 0px auto;
+margin-top: 40px;
+padding: 30px;
+
+}
+
 
 
 .post-title{font-weight: normal;
@@ -58,14 +87,10 @@ margin: 10px 0;
 
 }
 
-.post-img{max-width:500px;
+.post-img{max-width:100% ;
 	display: block;
 margin: 30px auto;
 
 
 
 }
-
-
-
-
